[project]
name = "interactive-plots-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "rich>=14.1.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
